--- a/app/index.html
+++ b/app/index.html
@@ -838,7 +838,7 @@ $('.input-group.date').datepicker({
 			<span>Активные</span>
 		</div>
 		<div class="row list_bot">
-			<div class="first_column">
+			<div class="first_column" data-toggle="popover_jeka" data-trigger="hover" data-html="true"  data-placement="bottom">
 				<div class="img14"></div>
 				<span>msi gaming dota 2 cup</span>
 			</div>
@@ -862,7 +862,7 @@ $('.input-group.date').datepicker({
 			</div>
 		</div>
 		<div class="row list_bot not_m">
-			<div class="first_column">
+			<div class="first_column" data-toggle="popover_jeka" data-trigger="hover" data-html="true"  data-placement="bottom">
 				<div class="img14"></div>
 				<span>msi gaming dota 2 cup</span>
 			</div>
@@ -886,7 +886,7 @@ $('.input-group.date').datepicker({
 			</div>
 		</div>
 		<div class="row list_bot not_m">
-			<div class="first_column">
+			<div class="first_column" data-toggle="popover_jeka" data-trigger="hover" data-html="true"  data-placement="bottom">
 				<div class="img14"></div>
 				<span>msi gaming dota 2 cup</span>
 			</div>
@@ -894,7 +894,7 @@ $('.input-group.date').datepicker({
 				<div class="img15"></div>
 				<span>Dota2</span>
 			</div>
-			<div class="third_column">
+			<div class="third_column"> 
 				<span3>Nas Ne Dognyat</span3>
 				<div class="img16"></div>
 				<span4>vs</span4>
@@ -915,7 +915,7 @@ $('.input-group.date').datepicker({
 				<span>Будущее</span>
 			</div>
 			<div class="row list_bot">
-				<div class="first_column">
+				<div class="first_column" data-toggle="popover_jeka" data-trigger="hover" data-html="true"  data-placement="bottom">
 					<div class="img14"></div>
 					<span>msi gaming dota 2 cup</span>
 				</div>
@@ -939,7 +939,7 @@ $('.input-group.date').datepicker({
 				</div>
 			</div>
 			<div class="row list_bot not_m">
-				<div class="first_column">
+				<div class="first_column" data-toggle="popover_jeka" data-trigger="hover" data-html="true"  data-placement="bottom">
 					<div class="img14"></div>
 					<span>msi gaming dota 2 cup</span>
 				</div>
@@ -963,7 +963,7 @@ $('.input-group.date').datepicker({
 				</div>
 			</div>
 			<div class="row list_bot not_m">
-				<div class="first_column">
+				<div class="first_column" data-toggle="popover_jeka" data-trigger="hover" data-html="true"  data-placement="bottom">
 					<div class="img14"></div>
 					<span>msi gaming dota 2 cup</span>
 				</div>
