fixed menu and popover signed

--- a/app/index.html
+++ b/app/index.html
@@ -72,10 +72,10 @@ $('.input-group.date').datepicker({
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			      <ul class="nav navbar-nav navbar-right">
-			            <li><a href="#">Добавить турнир</a></li>
-			            <li><a href="#">новости</a></li>
-			            <li><a href="#">реклама</a></li>
-			            <li><a href="#" class="line-radius" data-html="true"  data-toggle="popover" data-placement="bottom">вход | регистрация</a></li>
+			            <li class="li"><a class="a" href="#">Добавить турнир</a></li>
+			            <li class="li"><a class="a" href="#">новости</a></li>
+			            <li class="li"><a class="a" href="#">реклама</a></li>
+			            <li class="li"><a  href="#" class=" line-radius" data-html="true"  data-toggle="popover" data-placement="bottom">вход | регистрация</a></li>
 			      </ul>
 			    </div><!-- /.navbar-collapse -->
 	  		</div><!-- /.container-fluid -->
