--- a/app/index.html
+++ b/app/index.html
@@ -131,7 +131,7 @@ $('.input-group.date').datepicker({
 <section class="main">
   <div class="container">
     <div class="row">
-      <div class="col-md-8 col-sm-6 col-xs-6">
+      <div class="col-md-8 col-sm-6 col-xs-6 inf">
         <h2 class="mq">главные события</h2>
       </div>
       <div class="col-md-4 col-sm-6 col-xs-6 serch">
@@ -152,7 +152,7 @@ $('.input-group.date').datepicker({
                 <h5>msi gamin dota 2 cup</h5>
                 <span>12.06.16-18.06.16 <img src="img/icon-c.png" alt="">Call of  Duty Европа</span>
               </div>
-              <div class="col-xs-3 right_t"><p>30000р.</p></div>
+              <div class="col-xs-3 right_t"><h3>30000р.</h3></div>
             </div>
           </div>
         </div>
@@ -163,7 +163,7 @@ $('.input-group.date').datepicker({
                 <h5>msi gamin dota 2 cup</h5>
                 <span>12.06.16-18.06.16 <img src="img/icon-c.png" alt="">Call of Duty Европа</span>
               </div>
-              <div class="col-xs-3 right_t"><p>30000р.</p></div>
+              <div class="col-xs-3 right_t"><h3>30000р.</h3></div>
             </div>
           </div>
         </div>
@@ -174,7 +174,7 @@ $('.input-group.date').datepicker({
                 <h5>msi gamin dota 2 cup</h5>
                 <span>12.06.16-18.06.16 <img src="img/icon-c.png" alt="">Call of Duty Европа</span>
               </div>
-              <div class="col-xs-3 right_t"><p>30000р.</p></div>
+              <div class="col-xs-3 right_t"><h3>30000р.</h3></div>
             </div>
           </div>
         </div>
@@ -788,12 +788,12 @@ $('.input-group.date').datepicker({
 			    <li><a href="#">3 <span class="sr-only">(current)</span></a></li>
 			    <li><a href="#">4 <span class="sr-only">(current)</span></a></li>
 			    <li><a href="#">5 <span class="sr-only">(current)</span></a></li>
-			    <li><a href="#">6 <span class="sr-only">(current)</span></a></li>
+			    <!-- <li><a href="#">6 <span class="sr-only">(current)</span></a></li>
 			    <li><a href="#">7 <span class="sr-only">(current)</span></a></li>
 			    <li><a href="#">8 <span class="sr-only">(current)</span></a></li>
 			    <li><a href="#">... <span class="sr-only">(current)</span></a></li>
 			    <li><a href="#">14 <span class="sr-only">(current)</span></a></li>
-			    <li><a href="#">15 <span class="sr-only">(current)</span></a></li>
+			    <li><a href="#">15 <span class="sr-only">(current)</span></a></li> -->
 			    <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&gt;</span></a></li>
 			  </ul>
 			</nav>
@@ -802,12 +802,13 @@ $('.input-group.date').datepicker({
 
 <div class="row">
 	<div class="history col-md-12">
-		<div class="img_history col-md-2 col-sm-2 col-xs-12"></div>
+		<!--div class="img_history col-md-2 col-sm-2 col-xs-12"></div-->
+		<div class="col-xs-12 newi"><img src="/img/Lineage_logo.jpg" alt=""></div>
 		<div class="tetx_history col-md-6 col-sm-6 col-xs-12">
 			<h1>история развития linage </h1>
 			<span>Спустя почти 5 лет, 1 октября 2003 года, стартует приквел к первой части Lineage, события в мире которого происходят за 150 лет до событий оригинала. Потомок первой линейки обзавелся полноценной 3D графикой и потрясающей по тем временам детализацией. А в ее широкой груди бьется сердце Unreal Engine 2.0, последующие версии которого ...</span>
-			<div><a href="#">Узнать правду</a></div>
-			<nav aria-label="..." class="number_page">
+			<div class="now_"><a href="#">Узнать правду</a></div>
+			<!--nav aria-label="..." class="number_page"-->
 			  <ul class="pagination">
 			    <li class="disabled"><a href="#" ><span>&gt;</span></a></li>
 			    <li><a href="#">6 <span class="sr-only">(current)</span></a></li>
@@ -818,7 +819,7 @@ $('.input-group.date').datepicker({
 			    <li><a href="#">1 <span class="sr-only">(current)</span></a></li>
 			    <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&lt;</span></a></li>
 			  </ul>
-			</nav>
+			<!--/nav-->
 		</div>
 		<div class="social_page col-md-4">
 		<div class="col-md-3 vk"></div>
@@ -1019,7 +1020,7 @@ $('.input-group.date').datepicker({
 				<a><img src="/img/vk_logo.png" alt=""></a>
 				<a><img src="/img/fb_logo.png" alt=""></a>
 				<a><img src="/img/skype.png" alt=""><span>es-match.com</span></a>
-				<a><img src="/img/mail.png" alt=""><span>suppor&#64;tes-match.com</span></a>
+				<a class="newl"><img src="/img/mail.png" alt=""><span>suppor&#64;tes-match.com</span></a>
 			</div>
 			<div class="abaout col-md-12 col-sm-12 col-xs-12">
 				<h1>о сервисе</h1>
